--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -527,14 +527,14 @@
                                                 </div>
                                             </div>
                                                 <div class="county-header" v-for="group in filings">
-                                                    <b>We found and reviewed {{group.filings[0].numCounts}} count(s) in {{group.county}} County:</b>
+                                                    <b>We found and reviewed {{group.filings[0].numCounts}} count(s) in <u>{{group.county}}</u> County:</b>
                                                 <div v-for="filing in group.filings" v-if="filing.type !='NoA'">
                                                     <filing-type-heading v-if="filing.numCounts > 0" v-bind:heading="filing.type"></filing-type-heading>
                                                     <ul>
                                                         <li v-for="count in filing.counts">
                                                             You were charged with {{count.description}}. 
                                                             <p>
-                                                                Docket note: "{{count.offenseDisposition}}" - {{count.dispositionDate}}.
+                                                                Docket note: "{{count.offenseDisposition}}" - {{count.dispositionDate}}. (Docket#  {{count.docketNum}} {{count.docketCounty}})
                                                             </p>
                                                         </li>
                                                     </ul>
@@ -549,7 +549,7 @@
                                                     <b>Ineligible / No Filing</b>
                                                 </p>
                                                 <p>
-                                                    You had {{ineligible.length}} count(s) that we did not file anything for today. Future filing may be possible under current law or later enacted laws. The notes section below may provide further explanation."
+                                                    You had {{ineligible.length}} count(s) that we did not file anything for today. Future filing may be possible under current law or later enacted laws. The notes section below may provide further explanation. The details of these count(s) are as follows:
                                                 </p>
                                                 <ul>
                                                     <li v-for="filing in ineligible">
