Move Vue components into a separate file

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -536,6 +536,7 @@
         </div>
                     <!-- End Vue App -->
 
+        <script id='script' src="components.js"></script>
         <script id='script' src="filings.js"></script>
         <script id='script' src="csv.js"></script>
 
