--- a/extensionDirectory/manage-counts.html
+++ b/extensionDirectory/manage-counts.html
@@ -75,6 +75,7 @@
             </div>
         </div>
                     <!-- End Vue App -->
+        <script id='script' src="components.js"></script>
         <script id='script' src="filings.js"></script>
 
 </body>
