--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -134,6 +134,7 @@
 
     </div>
 </div>
+    <script id='script' src="components.js"></script>
     <script id='script' src="popup.js"></script>
     <script id='script' src="filings.js"></script>
 </body>
