--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -95,10 +95,10 @@
                                             <p class="indent">
 
                                                 <template v-if="settings.proSe">
-                                                    NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob}}), appearing <span class="italic">pro se</span>, and hereby enters this notice of appearance in the above captioned action.
+                                                    NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob | dateFormatSimple}}), appearing <span class="italic">pro se</span>, and hereby enters this notice of appearance in the above captioned action.
                                                 </template>
                                                 <template v-else>
-                                                    NOW COMES <span class="no-visible">{{settings['attorney']}}</span><input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">, by and on behalf of {{petitioner.name}} (DOB: {{petitioner.dob}}), and hereby enters this notice of appearance in the above captioned action.
+                                                    NOW COMES <span class="no-visible">{{settings['attorney']}}</span><input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">, by and on behalf of {{petitioner.name}} (DOB: {{petitioner.dob | dateFormatSimple}}), and hereby enters this notice of appearance in the above captioned action.
                                                 </template>
                                             </p>
                                         </div>
@@ -106,7 +106,7 @@
                                         <!-- (Stipulated) Petiton To Expunge Conviction -->
                                         <div class="filing-body" v-if="filing.type == 'ExC' || filing.type == 'StipExC'">
                                             <p class="indent">
-                                                NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob}}),
+                                                NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob | dateFormatSimple}}),
                                                 <template v-if="settings.proSe">appearing <span class="italic">pro se</span>
                                                 </template>
                                                 <template v-else>
@@ -147,7 +147,7 @@
                                         <div class="filing-body" v-if="filing.type == 'ExNC' || filing.type == 'StipExNC'">
 
                                             <p class="indent">
-                                                NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob}}),
+                                                NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob | dateFormatSimple}}),
                                                 <template v-if="settings.proSe">appearing <span class="italic">pro se</span>
                                                 </template>
                                                 <template v-else>
@@ -162,8 +162,8 @@
                                                 </thead>
                                                 <tbody class="count-table__body">
                                                     <tr class="count-item" v-for="count in filing.counts">
-                                                        <td class="count-item__date"><span class="no-visible">{{count.dispositionDate}}</span>
-                                                            <input class="no-print" v-model="count.dispositionDate">
+                                                        <td class="count-item__date"><span class="no-visible">{{count.dispositionDate | dateFormatSimple}}</span>
+                                                            <input type="date" class="no-print" v-model="count.dispositionDate">
                                                         </td>
                                                         <td class="count-item__description"><span class="no-visible">{{count.descriptionFull}}</span>
                                                             <textarea rows="1" class="no-print count-item__textarea" v-model="count.descriptionFull"></textarea>
@@ -183,7 +183,7 @@
                                         <div class="filing-body" v-if="filing.type == 'ExNCrim' || filing.type == 'StipExNCrim'">
 
                                             <p class="indent">
-                                                NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob}}),
+                                                NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob | dateFormatSimple}}),
                                                 <template v-if="settings.proSe">appearing <span class="italic">pro se</span>
                                                 </template>
                                                 <template v-else>
@@ -199,8 +199,8 @@
                                                 </thead>
                                                 <tbody class="count-table__body">
                                                     <tr class="count-item" v-for="count in filing.counts">
-                                                        <td class="count-item__date"><span class="no-visible">{{count.dispositionDate}}</span>
-                                                            <input class="no-print" v-model="count.dispositionDate">
+                                                        <td class="count-item__date"><span class="no-visible">{{count.dispositionDate | dateFormatSimple}}</span>
+                                                            <input type="date" class="no-print" v-model="count.dispositionDate">
                                                         </td>
                                                         <td class="count-item__description"><span class="no-visible">{{count.descriptionFull}}</span>
                                                             <textarea rows="1" class="no-print count-item__textarea" v-model="count.descriptionFull"></textarea>
@@ -220,7 +220,7 @@
                                         <div class="filing-body" v-if="filing.type == 'SC' || filing.type == 'StipSC'">
 
                                             <p class="indent">
-                                                NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob}}),
+                                                NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob | dateFormatSimple}}),
                                                 <template v-if="settings.proSe">appearing <span class="italic">pro se</span>
                                                 </template>
                                                 <template v-else>
@@ -237,11 +237,11 @@
                                                 </thead>
                                                 <tbody class="count-table__body">
                                                     <tr class="count-item" v-for="count in filing.counts">
-                                                        <td class="count-item__date"><span class="no-visible">{{count.dispositionDate}}</span>
-                                                            <input class="no-print" v-model="count.dispositionDate">
+                                                        <td class="count-item__date"><span class="no-visible">{{count.dispositionDate | dateFormatSimple}}</span>
+                                                            <input type="date" class="no-print" v-model="count.dispositionDate">
                                                         </td>
-                                                        <td class="count-item__description"><span class="no-visible">{{count.descriptionFull}}</span>
-                                                            <textarea rows="1" class="no-print count-item__textarea" v-model="count.descriptionFull"></textarea>
+                                                        <td class="count-item__description"><span class="no-visible">{{count.description}}</span>
+                                                            <textarea rows="1" class="no-print count-item__textarea" v-model="count.description"></textarea>
                                                         </td>
                                                     </tr>
                                                 </tbody>
@@ -261,7 +261,7 @@
                                         <div class="filing-body" v-if="filing.type == 'SDui' || filing.type == 'StipSDui'">
 
                                             <p class="indent">
-                                                NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob}}),
+                                                NOW COMES {{petitioner.name}} (DOB: {{petitioner.dob }}),
                                                 <template v-if="settings.proSe">appearing <span class="italic">pro se</span>
                                                 </template>
                                                 <template v-else>
@@ -417,7 +417,7 @@
                                         <div class="filing__title">Clinic Checkout Sheet</div>
                                         <div class="filing-body">
                                             <div class="title petition__title"></div>
-                                            <h1>Filings for {{petitioner.name}} (DOB: {{petitioner.dob}})</h1>
+                                            <h1>Filings for {{petitioner.name}} (DOB: {{petitioner.dob | dateFormatSimple}})</h1>
                                             <p class="filing-closing__petitioner-address" v-html="petitioner.address">
                                                 <p class="filing-closing__phone">Phone: <span class="no-visible">{{responses['phone']}}</span>
                                                     <input class="no-print" v-model="responses['phone']" placeholder="Petitioner Phone Number">
@@ -535,10 +535,10 @@
         </template>
         </div>
                     <!-- End Vue App -->
-
         <script id='script' src="components.js"></script>
         <script id='script' src="filings.js"></script>
         <script id='script' src="csv.js"></script>
+
 
 </body>
 
