--- a/extensionDirectory/manage-counts.html
+++ b/extensionDirectory/manage-counts.html
@@ -37,7 +37,10 @@
                     </div>
                 </div>
             </div>
-                <section v-for="group in saved.counts" v-bind:id="group" style="margin:40px;">
+                <section v-for="(group, index) in saved.counts" v-bind:id="group" style="margin:40px;">
+                    <h2>Count {{index + 1}}: <span v-if="group.description">{{group.description}}</span></h2>
+                    <br>
+                    <button v-on:click="confirmDeleteCount($event,group.uid)">Delete Count</button>
                     <br>
                     County:
                     <select v-model="group.county">
@@ -61,7 +64,7 @@
                     Alleged Offense Date: <input type="date" v-model="group.allegedOffenseDate" placeholder="Offense Date"><br>
                     Arrest Citation Date: <input type="date" v-model="group.arrestCitationDate" placeholder="Arrest Citation Date"><br>
                     Disposition Date: <input type="date" v-model="group.dispositionDate" placeholder="Disposition Date"><br>
-                    Offense Disposition: <input v-model="group.offenseDisposition" placeholder="Offense Disposition"><br>
+                    Offense Disposition Description: <input v-model="group.offenseDisposition" placeholder="Offense Disposition"><br>
                     Is Dismissed: <input v-model="group.isDismissed" type="checkbox"><br>
                     Description: <input v-model="group.description" placeholder="Description"><br>
                     Offense Class:
